# selective-msms

./: README.md  pyproject.toml
config/: eval.yml  sgr.yml
ms_uq/core/: __init__.py
ms_uq/evaluation/: visualisation.py
ms_uq/inference/: retrieve.py
scripts/: run_evaluation.py  run_sgr_evaluation.py  train_ensemble.py
tests/: smoke_test.py  test_uq_measures.py
